<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true">

<ImageView
    android:id="@+id/imageView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:contentDescription="@string/app_name"
    android:src="@drawable/title" />

<Button
    android:id="@+id/button1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:layout_marginTop="195dp"
    android:background="@color/white"
    android:text="@string/settings"
    android:textSize="44sp"
    android:onClick="setSettings" />

<Button
    android:id="@+id/button2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginTop="196dp"
    android:background="@color/white"
    android:text="@string/about"
    android:textSize="44sp"
    android:onClick="setAbout" />

<Button
    android:id="@+id/button3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/button2"
    android:layout_marginTop="13dp"
    android:background="@color/white"
    android:text="@string/scoreboard"
    android:textSize="44sp"
    android:onClick="setScoreboard" />

<Button
    android:id="@+id/button5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:background="@color/green"
    android:text="@string/three"
    android:textSize="90sp"
    android:onClick="newThree" />

<Button
    android:id="@+id/button6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:background="@color/yellow"
    android:text="@string/four"
    android:textSize="90sp"
    android:onClick="newFour" />

<Button
    android:id="@+id/button7"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:background="@color/red"
    android:text="@string/five"
    android:textSize="90sp"
    android:onClick="newFive" />

<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/button5"
    android:layout_centerHorizontal="true"
    android:text="@string/select"
    android:textSize="44sp" />

<Button
    android:id="@+id/button4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/button3"
    android:layout_marginTop="20dp"
    android:background="@color/white"
    android:onClick="newTips"
    android:text="@string/tips"
    android:textSize="44sp" />

    </RelativeLayout>