<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <ImageButton
        android:contentDescription="@string/home"
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/home"
        android:onClick="newGUI"
        android:background="@null" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageButton1"
        android:gravity="center"
        android:text="@string/tips"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/list"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text2"
        android:layout_marginTop="38dp"
        android:gravity="center"
        android:text="@string/luck"
        android:textSize="50sp" />
   
</RelativeLayout>